--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Kate Yurasova, Arthur Mazur",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^6.2.1"
+    "cypress": "^6.2.1",
+    "cypress-localstorage-commands": "^1.4.0"
   }
 }
